--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 src/gtdblite/Config.py
+
+#Ignore backup files from some Unix editors,
+*~
+*.swp
+*.bak
+
+#Ignore patches and any original files created by patch command
+*.diff
+*.patch
+*.orig
+*.rej
+
+#Ignore these hidden files from Mac OS X
+.DS_Store
+
+#Ignore hidden files from Dolphin window manager
+.directory
+ 
+ #Ignore all compiled python files (e.g. from running the unit tests):
+ *.pyc
+ *.pyo
+ *.py{}
+ *.py-e
